# UnknownEngine

./: .gitignore  CMakeLists.txt  CMakeModuleTemplate.cmake  CMakeModuleTemplate.txt  Doxyfile  MakeBuild.bat  PCHSupport.cmake  README.md  UnknownEngine.dox  UnknownEngine.kdev4  annotated.html  classes.html  dir_0064de57b2f9f722bc3cd782027a5692.html  dir_00e325aa151f88bc84914a2019443171.html  dir_06824b2c213f583421270ef814c7f146.html  dir_0807d0cc1fd943a42ad71ec724bf9286.html  dir_0a824aa1f70ce3b829ef378253b085da.html  dir_0b4eaef40a1fe20bedafe9e8e719ce66.html  dir_0b6ee6e7e9547e675db4add2e5de97da.html  dir_10470bd662284ab878683aeff6296198.html  dir_1dfe4a86cee15d5d6902f8c724dcf913.html  dir_21cf52af4d89294d28147882349bdbf8.html  dir_246cb09e9f6ee42d4c17397fd95c837f.html  dir_27231b8d7187d0151e9c35234b1f226d.html  dir_29ef60be0043681801a0de2a7d8a74db.html  dir_2a275c933008081e4db827998a3aa625.html  dir_2cd63b22225e2c378e1324fcfeb15f8c.html  dir_2dae0a562653f78d59931f0e4b070746.html  dir_36cbffb27dbc414bdbf9fadbe3b5b00f.html  dir_37bd14d7c2fe02e637317ec0fc544869.html  dir_3f8deb31ad4c568f1cdfbf6b9fed1808.html  dir_41ddc7fdef4dec6f003f821deab4678e.html  dir_42146a73759250e1b484e48dc24f5b60.html  dir_428677b5b30ba02d5e715a4e279acf19.html  dir_4364778cad68d35b5f47577051960c92.html  dir_4ab6b4cc6a7edbff49100e9123df213f.html  dir_4ae5fffbcbc3510f1e312830f9c89aca.html  dir_50e950edc42f66ce77b4a68ba7e41c5c.html  dir_54efafaaafe36fdcfc7a2a68ab5843a8.html  dir_55450edc703f20dba4945f11ee9e9cd8.html  (+54 more)
AngelScriptPlugin/: CMakeLists.txt
AngelScriptPlugin/config/: test.as
AngelScriptPlugin/include/: ASIncludes.h  AngelScriptMessageCallback.h  AngelScriptPlugin.h  AngelScriptSubsystem.h
AngelScriptPlugin/src/: AngelScriptPlugin.cpp  AngelScriptPluginExport.cpp  AngelScriptSubsystem.cpp
Application/: .cproject  .project  CMakeLists.txt
Application/idl/: test.fsb
Application/include/: StressTest.h
Application/scripts/: run.sh
Application/src/: Application.cpp  StressTest.cpp
AssimpMeshDataLoader/: CMakeLists.txt
AssimpMeshDataLoader/include/: AssimpMeshDataLoaderDescriptor.h  AssimpMeshDataLoaderDescriptorGetter.h  AssimpMeshDataLoaderPlugin.h
AssimpMeshDataLoader/src/: AssimpMeshDataLoaderPlugin.cpp  AssimpMeshDataLoaderPluginExport.cpp
CEGuiPlugin/: CMakeLists.txt
CEGuiPlugin/include/: BaseCEGuiComponent.h  CEGuiConsoleComponent.h  CEGuiConsoleComponentDesc.h  CEGuiContextFactory.h  CEGuiPlugin.h  CEGuiRendererType.h  CEGuiSchemeComponent.h  CEGuiSchemeDesc.h  CEGuiSubsystemFactory.h  CEGuiWindowImpl.h  FrameWindowComponent.h  FrameWindowDesc.h  ICEGuiComponent.h  ICEGuiContext.h  ICEGuiSubsystem.h  ICEGuiWidget.h  ICEGuiWindow.h  OgreCEGuiContext.h  OgreCEGuiContextDesc.h  OgreCEGuiSubsystem.h  OgreSeparateThreadCEGuiContext.h  OgreSynchronizedCEGuiContext.h  ScanCodeConverter.h
CEGuiPlugin/src/: CEGuiConsoleComponent.cpp  CEGuiContextFactory.cpp  CEGuiPlugin.cpp  CEGuiPluginExport.cpp  CEGuiSchemeComponent.cpp  CEGuiSubsystemFactory.cpp  CEGuiWindowImpl.cpp  FrameWindowComponent.cpp  OgreCEGuiContext.cpp  OgreCEGuiSubsystem.cpp  OgreSeparateThreadCEGuiContext.cpp  OgreSynchronizedCEGuiContext.cpp
DirectX11RenderSystem/: .cproject  .project  CMakeLists.txt
DirectX11RenderSystem/include/: DirectX11RenderSystemPlugin.h
DirectX11RenderSystem/src/: DirectX11RenderSystemPlugin.cpp  DirectX11RenderSystemPluginExport.cpp
DirectX11RenderSystemPlugin/: .cproject  .project  CMakeLists.txt
DirectX11RenderSystemPlugin/include/: Common.h  DirectX11RenderSystemPlugin.h
DirectX11RenderSystemPlugin/src/: DirectX11RenderSystemPlugin.cpp  DirectX11RenderSystemPluginExport.cpp
Endoscopy/: CMakeLists.txt
Endoscopy/Cases/: CMakeLists.txt
Endoscopy/ESCommon/: ESOperationResult.h
Endoscopy/ESGUIPlugin/: CMakeLists.txt
Endoscopy/ESInstrumentAlgorithmsPlugin/: CMakeLists.txt
Endoscopy/ESInstrumentHardwarePlugin/: CMakeLists.txt
Engine/: .cproject  .project  CMakeLists.txt  stdafx.h
Engine/include/: AbstractObjectFactory.h  BaseObjectFactory.h  DescriptorContainer.h  Engine.h  EngineContext.h  EngineLogLevel.h  EngineStarterComponent.h  Exception.h  InlineSpecification.h  LogHelper.h  MainLoopComponentFactory.h  NoSuitableFactoryFoundException.h  NumericIdentifierType.h  Singleton.h  StopEngineListener.h
Engine/src/: AbstractObjectFactory.cpp  DescriptorParsersManager.cpp  Engine.cpp  EngineStarterComponent.cpp  ExportedMessageTypes.cpp  MainLoopComponentFactory.cpp  StopEngineListener.cpp
InputContextMapper/: CMakeLists.txt
InputContextMapper/config/: ActionSlots.xml  InputLayout.cfg  inputContextMapperConfig.xml
InputContextMapper/include/: ActionCondition.h  ActionSlot.h  InputContext.h  InputContextMapper.h  InputContextMapperCreationOptions.h  InputContextMapperDescriptor.h  InputContextMapperDescriptorGetter.h  InputContextMapperFactory.h  InputContextMapperPlugin.h  KeyIsDownCondition.h
InputContextMapper/src/: ActionSlot.cpp  InputContext.cpp  InputContextMapper.cpp  InputContextMapperFactory.cpp  InputContextMapperPlugin.cpp  InputContextMapperPluginExport.cpp
Math/: .cproject  .project  CMakeLists.txt  Scalar.h  Vector3.cpp  Vector3.h
Math/include/: AlignedAnyHolder.h  AlignedNew.h  AxisAlignedBoundingBox.h  EigenQuaternionPlugin.h  MathPrerequisites.h  Quaternion.h  Scalar.h
Media/: CMakeLists.txt
Media/data/: ConsoleWindowLayout_Windows.layout  CrosshairImages.imageset  ESCrosshairLayout.layout  ESGuiScheme.scheme  ESHintLayout.layout  OgreComponentsTestScene.xml  README.md  StressTestScene.xml  TestScene.json  TestScene.xml  engine.ini  run.sh  test2.as
OgreRenderSystem/: CMakeLists.txt  stdafx.h
OgreRenderSystem/config/: .OgreComponentsTestScene.xml.kate-swp  Ambient.material  (+9 more)
PhysXPlugin/: CMakeLists.txt
Plugins/: .cproject  CMakeLists.txt  stdafx.h
ResourceManager/: CMakeLists.txt  stdafx.h
SDLUserInputPlugin/: CMakeLists.txt
SDLWindowManagerPlugin/: CMakeLists.txt
SimpleBehaviorPlugin/: CMakeLists.txt
Utils/: .cproject  .project  CMakeLists.txt
XmlSceneLoader/: .cproject  .project  CMakeLists.txt  stdafx.h
(+1968 files in other folders)
