file(GLOB DEPLOY_FILES_AND_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/data/*")
foreach(ITEM ${DEPLOY_FILES_AND_DIRS})
   IF( IS_DIRECTORY "${ITEM}" )
      LIST( APPEND DIRS_TO_DEPLOY "${ITEM}" )
   ELSE()
	  LIST( APPEND FILES_TO_DEPLOY "${ITEM}" )
   ENDIF()
endforeach()
install( FILES ${FILES_TO_DEPLOY} DESTINATION ${EXECUTABLE_DEPLOY_DIR})
install( DIRECTORY ${DIRS_TO_DEPLOY} DESTINATION ${EXECUTABLE_DEPLOY_DIR})

if(NOT WIN32)
	install( FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/run.sh" DESTINATION ${EXECUTABLE_DEPLOY_DIR} 
	 PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE )
endif()

