set(TARGET_NAME SDLWindowManagerPlugin)
set(LINKAGE SHARED)

set(INCLUDED_MODULE_HEADERS ComponentSystem Math SDLWindowManagerPlugin UserInput MessageSystem Plugins Utils Engine UserInput RenderSystem LogManager)
set(LINKED_LIBS Engine MessageSystem Plugins LogManager )
set(DEPENDS_ON_TARGETS ${LINKED_LIBS} )

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 sdl2)

if(NOT SDL2_FOUND)
    find_package(SDL2)
endif()

if(SDL2_FOUND)

	if(WIN32)
		list(GET SDL2_LIBRARIES 0 SDL2_TEMP_LIBRARY_NAME_LIBRARIES) 
		get_filename_component(SDL2_LIBRARY_DIR ${SDL2_TEMP_LIBRARY_NAME_LIBRARIES} DIRECTORY)
		install(FILES ${SDL2_LIBRARY_DIR}/SDL2.dll DESTINATION ${EXECUTABLE_DEPLOY_DIR})
	endif(WIN32)

	list( APPEND INCLUDED_HEADERS ${SDL2_INCLUDE_DIRS})
	list( APPEND LINKED_LIBS ${SDL2_LIBRARIES})

	include(${MODULE_TEMPLATE_CMAKELISTS_FILE})
  
endif(SDL2_FOUND)